# CodexOfAthlaethraen

./: .env.example  .gitignore  First_Echo_Report.txt  README.md  Volume_I.txt  progress_log.json  push_codex.bat  pyproject.toml  run.ps1  run.sh
app/config/: default.yaml
app/src/genie_lamp/: __init__.py  __main__.py  app.py  main.py
app/src/genie_lamp/api/: __init__.py  routes.py
app/src/genie_lamp/core/: actions.py  adapters.py  agent.py  config.py  hybrid_retrieval.py  logging.py  memory.py  meta_controller.py  models.py  self_model.py  skill_compiler.py  tool_registry.py  tts.py  utils.py  vector_store.py  vision.py
app/src/genie_lamp/gui/: dreamglass_app.py
app/src/genie_lamp/observability/: __init__.py  server.py
app/src/genie_lamp/prompts/: critic.json  proposer.json
app/src/genie_lamp/rehearsal/: __init__.py
app/src/genie_lamp/rituals/: __init__.py
app/src/genie_lamp/rooms/: shadow_module.py
app/src/genie_lamp/scripts/: setup_windows.ps1
app/src/genie_lamp/shield/: __init__.py
app/src/genie_lamp/skills/: __init__.py
app/src/genie_lamp/speech/: stt_faster_whisper.py
app/src/genie_lamp/tools/: emailer.py  (+3 more)
app/tests/smoke/: test_imports.py
containers/: Dockerfile
docs/: CONFIG.md  QUICKSTART.md  TROUBLESHOOTING.md  super_saiyan_genie_lamp.md
genie_lamp/: README.md  cfg.yaml  main.py  requirements.txt
genie_lamp/core/: agent.py  drives.py  hybrid_retrieval.py  memory.py  meta_controller.py  preferences.py  reasoners.py  router.py  tts.py  vector_store.py  watchdog.py
genie_lamp/lantern/: lantern.py
genie_lamp/prompts/: reflector.json
genie_lamp/rehearsal/: desktop_twin.py
genie_lamp/rituals/: release_lumaeth.py
genie_lamp/rooms/: dreams.py
genie_lamp/scheduler/: jobs.py
genie_lamp/scripts/: setup_linux.sh
genie_lamp/services/: install_systemd.sh  install_windows_service.ps1
genie_lamp/shield/: prompt_shield.py
genie_lamp/speech/: wakeword.py
genie_lamp/voice/: __init__.py
podcast_tts/: README.md  create_voice_profile.py  synthesize_podcast.py
scripts/: bootstrap.ps1  build.ps1  build.sh  common.ps1  common.sh  doctor.ps1  doctor.sh  fetch-model.ps1  fetch-model.sh  health.ps1  health.sh  install.ps1  install.sh  logs.ps1  logs.sh  repair-venv.ps1  run.ps1  service-start.ps1  service-start.sh  service-stop.ps1  service-stop.sh  smoke.ps1  smoke.sh  stop.ps1  test.ps1
tests/: test_http.py
the_assistant/: __init__.py  __main__.py  assistant_cli.py  memory_vessel.py
(+1 files in other folders)
